# barebones-pre-commit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
tests/: test_main.py  test_true.py
